a1/brendan_gordon/TEST_PROGRAMS/invalidtype/adam_carruthers/invalidAssignment.min
var x: int;
x = 3 * 3.14;

